<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/start_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:onClick="toggleState"
        android:padding="50dp"
        android:text="@string/start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/add_device_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/start_button"
        android:labelFor="@id/new_device"
        android:text="@string/add_device_name"
        android:textColor="@android:color/black"
        android:textSize="12pt" />

    <LinearLayout
        android:id="@+id/new_device_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_device_text"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/new_device"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:hint="@string/device_name"
            android:inputType="text"
            android:importantForAutofill="no" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="submitDeviceName"
            android:text="@string/add_device" />
    </LinearLayout>

    <TextView
        android:id="@+id/added_devices_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/new_device_layout"
        android:text="@string/added_devices"
        android:textColor="@android:color/black"
        android:textSize="12pt" />

    <ScrollView
        android:id="@+id/added_devices_scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/added_devices_label">

        <LinearLayout
            android:id="@+id/added_devices"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>

    <TextView
        android:id="@+id/new_devices_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/added_devices_scroll"
        android:text="@string/addable_devices"
        android:textColor="@android:color/black"
        android:textSize="12pt" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/new_devices_label">

        <LinearLayout
            android:id="@+id/new_devices"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>

</RelativeLayout>